--- a/public/index.css
+++ b/public/index.css
@@ -40,7 +40,7 @@ body,
 #search::placeholder {
   font-size: 14px;
   font-weight: bold;
-  color: #002439;
+  color: #034f84;
 }
 
 #search-clear-button {
@@ -95,6 +95,7 @@ body,
   font-weight: bolder;
   margin: 0;
   margin-bottom: 8px;
+  color: #cfe0e8;
 }
 
 .recipes-container {
